--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">We pride ourselves in delivering quality services.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
