--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="#form">Training</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Product</a></li>
@@ -455,6 +456,11 @@
             </div>
         </div> -->
         <!-- Contact-->
+        <!-- form-->
+        <section class="p-0 m-0" id="form">
+            <h2 style="text-align: center;">OLIM FARM AND VENTURE TRAINING FORM</h2>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScQrt9a_1RfKANmCmf7jh7gspCdHJz6iNkgBvgd4XBnDgDECg/viewform?usp=sf_link" height="500px"  class=" w-100"   title="description"></iframe>
+        </section>
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
